# sable-wasm

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  mir.design
benchmark/: .gitignore  NPB-3.0-C.naive.csv  NPB-3.0-C.optimized.csv  NPB3.0-omp-C.plot.py  NPB3.0-omp-C.xlsx  SableWasm Benchmark - NPB3.0-omp-C (MOps).csv  SableWasm Benchmark - NPB3.0-omp-C.csv  SableWasm Benchmark - ostrich.csv  SableWasm Benchmark - polybench-c-4.2.1-beta.csv  libsodium-1.0.18.naive.csv  libsodium-1.0.18.optimized.csv  libsodium-1.0.18.run.py  ostrich.plot.py  ostrich.run.py  ostrich.xlsx  plot.py  polybench-c-4.2.1-beta.plot.py  polybench-c-4.2.1-beta.run.py  polybench-c-4.2.1-beta.xlsx
benchmark/NPB3.0-omp-C/: BT.A.opt.wasm  BT.A.simd.wasm  CG.A.simd.wasm  EP.A.naive.wasm  EP.A.opt.wasm  EP.A.simd.wasm  FT.A.naive.wasm  FT.A.simd.wasm  IS.A.naive.wasm  IS.A.opt.wasm  LU.A.opt.wasm  LU.W.naive.wasm  LU.W.opt.wasm  LU.W.simd.wasm  MG.A.simd.wasm  SP.A.naive.wasm  SP.A.opt.wasm  SP.A.simd.wasm  run-all.py  sablewasm.run.py  wasmer-cranelift.run.py  wasmer-llvm.run.py  wasmtime.run.py
benchmark/libsodium-1.0.18/: aead_aes256gcm.naive.wasm  aead_aes256gcm.opt.wasm  aead_aes256gcm2.naive.wasm  aead_aes256gcm2.opt.wasm  aead_chacha20poly1305.naive.wasm  aead_chacha20poly1305.opt.wasm  aead_chacha20poly13052.naive.wasm  aead_chacha20poly13052.opt.wasm  aead_xchacha20poly1305.naive.wasm  aead_xchacha20poly1305.opt.wasm  auth.naive.wasm  auth.opt.wasm  auth2.naive.wasm  auth2.opt.wasm  auth3.naive.wasm  auth3.opt.wasm  auth5.naive.wasm  auth5.opt.wasm  auth6.naive.wasm  auth6.opt.wasm  auth7.naive.wasm  auth7.opt.wasm  box.naive.wasm  box.opt.wasm  box2.naive.wasm  box2.opt.wasm  box7.naive.wasm  box7.opt.wasm  box8.naive.wasm  box8.opt.wasm  box_easy.naive.wasm  box_easy.opt.wasm  box_easy2.naive.wasm  box_easy2.opt.wasm  box_seal.naive.wasm  box_seal.opt.wasm  box_seed.naive.wasm  box_seed.opt.wasm  chacha20.naive.wasm  chacha20.opt.wasm  (+114 more)
benchmark/ostrich/: backprop.naive.wasm  backprop.opt.wasm  backprop.simd.wasm  bfs.naive.wasm  bfs.opt.wasm  bfs.simd.wasm  crc.naive.wasm  crc.opt.wasm  crc.simd.wasm  fft.naive.wasm  fft.opt.wasm  fft.simd.wasm  hmm.naive.wasm  hmm.opt.wasm  hmm.simd.wasm  lavamd.naive.wasm  lavamd.opt.wasm  lavamd.simd.wasm  lud.naive.wasm  lud.opt.wasm  lud.simd.wasm  needle.naive.wasm  needle.opt.wasm  needle.simd.wasm  nqueens.naive.wasm  nqueens.opt.wasm  nqueens.simd.wasm  pagerank.naive.wasm  pagerank.opt.wasm  pagerank.simd.wasm  run-all.py  run.sh  sablewasm.run.py  spmv.naive.wasm  spmv.opt.wasm  spmv.simd.wasm  srad.naive.wasm  srad.opt.wasm  srad.simd.wasm  wasmer-cranelift.run.py  (+2 more)
benchmark/polybench-c-4.2.1-beta/: 2mm.naive.wasm  2mm.opt.wasm  2mm.simd.wasm  3mm.naive.wasm  adi.naive.wasm  adi.simd.wasm  atax.naive.wasm  atax.simd.wasm  bicg.naive.wasm  bicg.opt.wasm  cholesky.opt.wasm  cholesky.simd.wasm  correlation.naive.wasm  covariance.opt.wasm  deriche.opt.wasm  deriche.simd.wasm  doitgen.simd.wasm  durbin.simd.wasm  fdtd-2d.naive.wasm  fdtd-2d.opt.wasm  floyd-warshall.naive.wasm  floyd-warshall.opt.wasm  gemm.opt.wasm  gemm.simd.wasm  gemver.naive.wasm  gesummv.naive.wasm  gesummv.opt.wasm  jacobi-1d.opt.wasm  jacobi-1d.simd.wasm  jacobi-2d.naive.wasm  jacobi-2d.opt.wasm  lu.opt.wasm  lu.simd.wasm  ludcmp.simd.wasm  mvt.opt.wasm  mvt.simd.wasm  nussinov.naive.wasm  nussinov.opt.wasm  nussinov.simd.wasm  run-all.py  (+20 more)
src/: Main.cc  Tester.cc  sable-wasm.cc  validate.cc
src/bytecode/: Instruction.defs  Instruction.h  Module.cc  Module.h  Type.h  V128Value.h  Validation.cc  Validation.h
src/codegen-llvm-instance/: EntityLayout.cc  IRBuilder.cc  InstanceTester.cc  LLVMCodege.h  LLVMCodegen.cc  LLVMCodegen.h  TranslationCasts.cc  TranslationContext.cc  TranslationContext.h  TranslationVisitor.cc  TranslationVisitor.h  WASI.cc  WASI.h  WASITypes.h  WebAssemblyGlobal.cc  WebAssemblyInstance.cc  WebAssemblyInstance.h  WebAssemblyMemory.cc  WebAssemblyTable.cc
src/codegen-llvm-instance/runtime/: Base.c  Base.h
src/codegen_llvm_instance/: LLVMCodege.h  LLVMCodegen.cc
src/codegen_llvm_instance/runtime/: Global.c  Runtime.h  Table.c
src/mir/: ASTNode.cc  ASTNode.h  ASTNodeNameResolver.cc  BasicBlock.cc  BasicBlock.h  Binary.cc  Binary.h  Branch.cc  Branch.h  Cast.cc  Cast.defs  Cast.h  Compare.cc  Compare.h  Function.cc  Function.h  InitializerExpr.cc  InitializerExpr.h  Instruction.cc  Instruction.h  Instructions.cc  Intrinsic.cc  Intrinsic.h  LLVMCodegen.cc  LLVMCodegen.h  MIRCodegen.cc  MIRCodegen.h  MIRPrinter.h  MIRPrinter.tcc  Module.cc  Module.h  SIMD128Instructions.cc  SIMD128Instructions.h  Unary.cc  Unary.h  Vector.cc  Vector.h  mir-design-draft
src/mir/passes/: Dominator.cc  Dominator.h  IsWellformed.cc  IsWellformed.h  IsWellformedPass.cc  IsWellformedPass.h  Pass.h  ReachingDef.cc  ReachingDef.h  SimplifyCFG.cc  (+3 more)
src/parser/: ByteArrayReader.h  Delegate.h  DelegateEvents.defs  ExprBuilderDelegate.cc  ExprBuilderDelegate.h  ModuleBuilderDelegate.h  Parser.h  Reader.h  SIMD128Parser.tcc  SaturationArithmeticParser.tcc
src/utility/: Commons.h
test/: 2mm.simd.wasm  2mm.wasm  fibonacci.wasm  lu.W.wasm  lu.simd.wasm  main.wasm  simple_table.wasm  viu.wasm
test/NPB3.0-omp-C/: BT.A.naive.wasm  CG.A.naive.wasm  CG.A.opt.wasm  FT.A.opt.wasm  IS.A.simd.wasm  LU.A.naive.wasm  LU.A.simd.wasm  MG.A.naive.wasm  MG.A.opt.wasm
test/polybench-c-4.2.1-beta/: 2mm.wasm  3mm.opt.wasm  3mm.simd.wasm  3mm.wasm  adi.opt.wasm  adi.wasm  atax.opt.wasm  atax.wasm  bicg.simd.wasm  bicg.wasm  cholesky.naive.wasm  cholesky.wasm  compile.py  correlation.opt.wasm  correlation.simd.wasm  correlation.wasm  covariance.naive.wasm  covariance.simd.wasm  covariance.wasm  deriche.naive.wasm  deriche.wasm  doitgen.naive.wasm  doitgen.opt.wasm  doitgen.wasm  durbin.naive.wasm  durbin.opt.wasm  durbin.wasm  fdtd-2d.simd.wasm  fdtd-2d.wasm  floyd-warshall.simd.wasm  floyd-warshall.wasm  gemm.naive.wasm  gemm.wasm  gemver.opt.wasm  gemver.simd.wasm  gemver.wasm  gesummv.simd.wasm  gesummv.wasm  gramschmidt.naive.wasm  gramschmidt.opt.wasm  (+30 more)
(+2 files in other folders)
